Compilers (CS31003)/Lab/Assignments/Assignment 5/ass5_17CS10005_17CS10007/y.output
Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION
   SPACE
   HASH


State 22 conflicts: 21 shift/reduce
State 23 conflicts: 21 shift/reduce
State 24 conflicts: 21 shift/reduce
State 27 conflicts: 21 shift/reduce
State 32 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 63 conflicts: 3 shift/reduce
State 97 conflicts: 3 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 2 shift/reduce
State 106 conflicts: 1 shift/reduce
State 267 conflicts: 1 shift/reduce
State 268 conflicts: 1 shift/reduce
State 269 conflicts: 2 shift/reduce
State 270 conflicts: 2 shift/reduce
State 278 conflicts: 1 shift/reduce
State 311 conflicts: 1 shift/reduce
State 356 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INT_CONST
    3                   | FLOAT_CONST
    4                   | FRACTION_CONST
    5                   | CHAR_CONST
    6                   | STRING_LITERAL
    7                   | L_PARAN expression R_PARAN

    8 postfix_expression: primary_expression
    9                   | postfix_expression L_SQRB expression R_SQRB
   10                   | postfix_expression L_PARAN R_PARAN
   11                   | postfix_expression L_PARAN argument_expression_list R_PARAN
   12                   | postfix_expression DOT IDENTIFIER
   13                   | postfix_expression ARROW_ASSIGN IDENTIFIER
   14                   | postfix_expression INCREMENT
   15                   | postfix_expression DECREMENT
   16                   | L_PARAN type_name R_PARAN L_BRACES initializer_list R_BRACES
   17                   | L_PARAN type_name R_PARAN L_BRACES initializer_list COMMA R_BRACES

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF L_PARAN type_name R_PARAN

   26 unary_operator: ADD
   27               | MINUS
   28               | MUL
   29               | NEGATE
   30               | BIT_AND
   31               | NOT

   32 cast_expression: unary_expression
   33                | L_PARAN type_name R_PARAN cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression MUL cast_expression
   36                          | multiplicative_expression DIVIDE cast_expression
   37                          | multiplicative_expression REMAINDER cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression ADD multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression L_SHIFT additive_expression
   43                 | shift_expression R_SHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LESS_THAN_EQUAL shift_expression
   48                      | relational_expression GREATER_THAN_EQUAL shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression IS_EQUAL relational_expression
   51                    | equality_expression NOT_EQUAL relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression BIT_AND equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression BIT_XOR AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression BIT_OR exclusive_OR_expression

   58 BOOL_AND_expression: inclusive_OR_expression
   59                    | BOOL_AND_expression BOOL_AND M inclusive_OR_expression

   60 BOOL_OR_expression: BOOL_AND_expression
   61                   | BOOL_OR_expression BOOL_OR M BOOL_AND_expression

   62 conditional_expression: BOOL_OR_expression
   63                       | BOOL_OR_expression QM M expression N COLON M conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: ASSIGN
   67                    | ADD_ASSIGN
   68                    | MINUS_ASSIGN
   69                    | MUL_ASSIGN
   70                    | DIVIDE_ASSIGN
   71                    | REM_ASSIGN
   72                    | L_SHIFT_ASSIGN
   73                    | R_SHIFT_ASSIGN
   74                    | BIT_OR_ASSIGN
   75                    | BIT_AND_ASSIGN
   76                    | BIT_XOR_ASSIGN

   77 expression: assignment_expression
   78           | expression COMMA assignment_expression

   79 constant_expression: conditional_expression

   80 storage_class_specifier: EXTERN
   81                        | STATIC
   82                        | AUTO
   83                        | REGISTER

   84 type_specifier: VOID
   85               | CHAR
   86               | SHORT
   87               | INT
   88               | LONG
   89               | FLOAT
   90               | DOUBLE
   91               | SIGNED
   92               | UNSIGNED
   93               | _BOOL
   94               | _COMPLEX
   95               | _IMAGINARY
   96               | enum_specifier

   97 function_specifier: INLINE

   98 init_declarator_list: init_declarator
   99                     | init_declarator_list COMMA init_declarator

  100 init_declarator: declarator
  101                | declarator ASSIGN initializer

  102 declaration_specifiers: storage_class_specifier
  103                       | storage_class_specifier declaration_specifiers
  104                       | type_specifier
  105                       | type_specifier declaration_specifiers
  106                       | type_qualifier
  107                       | type_qualifier declaration_specifiers
  108                       | function_specifier
  109                       | function_specifier declaration_specifiers

  110 declaration: declaration_specifiers
  111            | declaration_specifiers init_declarator_list

  112 type_qualifier: CONST
  113               | RESTRICT
  114               | VOLATILE

  115 specifier_qualifier_list: type_specifier
  116                         | type_specifier specifier_qualifier_list
  117                         | type_qualifier
  118                         | type_qualifier specifier_qualifier_list

  119 enumerator: IDENTIFIER
  120           | IDENTIFIER ASSIGN constant_expression

  121 enumerator_list: enumerator
  122                | enumerator_list COMMA enumerator

  123 enum_specifier: ENUM IDENTIFIER L_BRACES enumerator_list R_BRACES
  124               | ENUM L_BRACES enumerator_list R_BRACES
  125               | ENUM IDENTIFIER L_BRACES enumerator_list COMMA R_BRACES
  126               | ENUM L_BRACES enumerator_list COMMA R_BRACES
  127               | ENUM IDENTIFIER

  128 pointer: MUL
  129        | MUL type_qualifier_list
  130        | MUL type_qualifier_list pointer
  131        | MUL pointer

  132 direct_declarator: IDENTIFIER
  133                  | L_PARAN declarator R_PARAN
  134                  | direct_declarator L_SQRB type_qualifier_list assignment_expression R_SQRB
  135                  | direct_declarator L_SQRB R_SQRB
  136                  | direct_declarator L_SQRB type_qualifier_list R_SQRB
  137                  | direct_declarator L_SQRB assignment_expression R_SQRB
  138                  | direct_declarator L_SQRB STATIC type_qualifier_list assignment_expression R_SQRB
  139                  | direct_declarator L_SQRB STATIC assignment_expression R_SQRB
  140                  | direct_declarator L_SQRB type_qualifier_list STATIC assignment_expression R_SQRB
  141                  | direct_declarator L_SQRB type_qualifier_list MUL R_SQRB
  142                  | direct_declarator L_SQRB MUL R_SQRB
  143                  | direct_declarator L_PARAN X parameter_type_list R_PARAN
  144                  | direct_declarator L_PARAN X identifier_list R_PARAN
  145                  | direct_declarator L_PARAN X R_PARAN

  146 declarator: direct_declarator
  147           | pointer direct_declarator

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 parameter_type_list: parameter_list
  151                    | parameter_list COMMA ELLIPSES

  152 parameter_declaration: declaration_specifiers
  153                      | declaration_specifiers declarator

  154 parameter_list: parameter_declaration
  155               | parameter_list COMMA parameter_declaration

  156 identifier_list: IDENTIFIER
  157                | identifier_list COMMA IDENTIFIER

  158 type_name: specifier_qualifier_list

  159 initializer: assignment_expression
  160            | L_BRACES initializer_list R_BRACES
  161            | L_BRACES initializer_list COMMA R_BRACES

  162 initializer_list: designation initializer
  163                 | initializer
  164                 | initializer_list COMMA designation initializer
  165                 | initializer_list COMMA initializer

  166 designation: designator_list ASSIGN

  167 designator_list: designator
  168                | designator_list designator

  169 designator: L_SQRB constant_expression R_SQRB
  170           | DOT IDENTIFIER

  171 labeled_statement: IDENTIFIER COLON statement
  172                  | CASE constant_expression COLON statement
  173                  | DEFAULT COLON statement

  174 compound_statement: L_BRACES block_item_list R_BRACES
  175                   | L_BRACES R_BRACES

  176 block_item_list: block_item
  177                | block_item_list M block_item

  178 block_item: M declaration
  179           | statement

  180 expression_statement: expression SEMICOLON
  181                     | SEMICOLON

  182 M: %empty

  183 N: %empty

  184 expression_opt1: %empty
  185                | expression

  186 expression_opt2: %empty
  187                | expression

  188 selection_statement: IF L_PARAN expression_opt2 R_PARAN M statement N ELSE M statement
  189                    | IF L_PARAN expression_opt2 R_PARAN M statement
  190                    | SWITCH L_PARAN expression R_PARAN statement

  191 iteration_statement: WHILE M L_PARAN expression_opt2 R_PARAN M statement
  192                    | DO M statement M WHILE L_PARAN expression_opt2 R_PARAN SEMICOLON
  193                    | FOR L_PARAN expression_opt1 SEMICOLON M expression_opt2 SEMICOLON M expression_opt1 N R_PARAN M statement
  194                    | FOR L_PARAN declaration expression SEMICOLON expression R_PARAN statement
  195                    | FOR L_PARAN declaration expression SEMICOLON R_PARAN statement
  196                    | FOR L_PARAN declaration SEMICOLON expression R_PARAN statement
  197                    | FOR L_PARAN declaration SEMICOLON R_PARAN statement

  198 jump_statement: GOTO IDENTIFIER SEMICOLON
  199               | CONTINUE SEMICOLON
  200               | BREAK SEMICOLON
  201               | RETURN expression SEMICOLON
  202               | RETURN SEMICOLON

  203 statement: labeled_statement
  204          | compound_statement
  205          | expression_statement
  206          | selection_statement
  207          | iteration_statement
  208          | jump_statement

  209 external_declaration: function_definition
  210                     | declaration SEMICOLON Y

  211 translation_unit: external_declaration
  212                 | translation_unit external_declaration

  213 declaration_list: declaration
  214                 | declaration_list declaration

  215 function_definition: declaration_specifiers declarator declaration_list compound_statement Y
  216                    | declaration_specifiers declarator compound_statement Y

  217 X: %empty

  218 Y: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO (258) 82
BREAK (259) 200
CASE (260) 172
CHAR (261) 85
CONST (262) 112
CONTINUE (263) 199
DEFAULT (264) 173
DO (265) 192
DOUBLE (266) 90
ELSE (267) 188
ENUM (268) 123 124 125 126 127
EXTERN (269) 80
FLOAT (270) 89
FOR (271) 193 194 195 196 197
GOTO (272) 198
IF (273) 188 189
INLINE (274) 97
INT (275) 87
LONG (276) 88
REGISTER (277) 83
RESTRICT (278) 113
RETURN (279) 201 202
SHORT (280) 86
SIGNED (281) 91
SIZEOF (282) 24 25
STATIC (283) 81 138 139 140
STRUCT (284)
SWITCH (285) 190
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 92
VOID (289) 84
VOLATILE (290) 114
WHILE (291) 191 192
_BOOL (292) 93
_COMPLEX (293) 94
_IMAGINARY (294) 95
INT_CONST (295) 2
FRACTION_CONST (296) 4
FLOAT_CONST (297) 3
CHAR_CONST (298) 5
STRING_LITERAL (299) 6
IDENTIFIER (300) 1 12 13 119 120 123 125 127 132 156 157 170 171 198
L_PARAN (301) 7 10 11 16 17 25 33 133 143 144 145 188 189 190 191 192
    193 194 195 196 197
R_PARAN (302) 7 10 11 16 17 25 33 133 143 144 145 188 189 190 191 192
    193 194 195 196 197
L_SQRB (303) 9 134 135 136 137 138 139 140 141 142 169
R_SQRB (304) 9 134 135 136 137 138 139 140 141 142 169
DOT (305) 12 170
ARROW_ASSIGN (306) 13
INCREMENT (307) 14 21
DECREMENT (308) 15 22
L_BRACES (309) 16 17 123 124 125 126 160 161 174 175
R_BRACES (310) 16 17 123 124 125 126 160 161 174 175
COMMA (311) 17 19 78 99 122 125 126 151 155 157 161 164 165
BIT_AND (312) 30 53
ADD (313) 26 39
MINUS (314) 27 40
MUL (315) 28 35 128 129 130 131 141 142
DIVIDE (316) 36
REMAINDER (317) 37
NEGATE (318) 29
NOT (319) 31
SPACE (320)
L_SHIFT (321) 42
R_SHIFT (322) 43
LESS_THAN (323) 45
GREATER_THAN (324) 46
LESS_THAN_EQUAL (325) 47
GREATER_THAN_EQUAL (326) 48
IS_EQUAL (327) 50
NOT_EQUAL (328) 51
BIT_OR (329) 57
BIT_XOR (330) 55
BOOL_OR (331) 61
BOOL_AND (332) 59
QM (333) 63
COLON (334) 63 171 172 173
ASSIGN (335) 66 101 120 166
ADD_ASSIGN (336) 67
MINUS_ASSIGN (337) 68
MUL_ASSIGN (338) 69
DIVIDE_ASSIGN (339) 70
REM_ASSIGN (340) 71
L_SHIFT_ASSIGN (341) 72
R_SHIFT_ASSIGN (342) 73
BIT_AND_ASSIGN (343) 75
BIT_OR_ASSIGN (344) 74
BIT_XOR_ASSIGN (345) 76
ELLIPSES (346) 151
SEMICOLON (347) 180 181 192 193 194 195 196 197 198 199 200 201 202
    210
HASH (348)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
primary_expression (95)
    on left: 1 2 3 4 5 6 7, on right: 8
postfix_expression (96)
    on left: 8 9 10 11 12 13 14 15 16 17, on right: 9 10 11 12 13 14
    15 20
argument_expression_list (97)
    on left: 18 19, on right: 11 19
unary_expression (98)
    on left: 20 21 22 23 24 25, on right: 21 22 24 32 65
unary_operator (99)
    on left: 26 27 28 29 30 31, on right: 23
cast_expression (100)
    on left: 32 33, on right: 23 33 34 35 36 37
multiplicative_expression (101)
    on left: 34 35 36 37, on right: 35 36 37 38 39 40
additive_expression (102)
    on left: 38 39 40, on right: 39 40 41 42 43
shift_expression (103)
    on left: 41 42 43, on right: 42 43 44 45 46 47 48
relational_expression (104)
    on left: 44 45 46 47 48, on right: 45 46 47 48 49 50 51
equality_expression (105)
    on left: 49 50 51, on right: 50 51 52 53
AND_expression (106)
    on left: 52 53, on right: 53 54 55
exclusive_OR_expression (107)
    on left: 54 55, on right: 55 56 57
inclusive_OR_expression (108)
    on left: 56 57, on right: 57 58 59
BOOL_AND_expression (109)
    on left: 58 59, on right: 59 60 61
BOOL_OR_expression (110)
    on left: 60 61, on right: 61 62 63
conditional_expression (111)
    on left: 62 63, on right: 63 64 79
assignment_expression (112)
    on left: 64 65, on right: 18 19 65 77 78 134 137 138 139 140 159
assignment_operator (113)
    on left: 66 67 68 69 70 71 72 73 74 75 76, on right: 65
expression (114)
    on left: 77 78, on right: 7 9 63 78 180 185 187 190 194 195 196
    201
constant_expression (115)
    on left: 79, on right: 120 169 172
storage_class_specifier (116)
    on left: 80 81 82 83, on right: 102 103
type_specifier (117)
    on left: 84 85 86 87 88 89 90 91 92 93 94 95 96, on right: 104
    105 115 116
function_specifier (118)
    on left: 97, on right: 108 109
init_declarator_list (119)
    on left: 98 99, on right: 99 111
init_declarator (120)
    on left: 100 101, on right: 98 99
declaration_specifiers (121)
    on left: 102 103 104 105 106 107 108 109, on right: 103 105 107
    109 110 111 152 153 215 216
declaration (122)
    on left: 110 111, on right: 178 194 195 196 197 210 213 214
type_qualifier (123)
    on left: 112 113 114, on right: 106 107 117 118 148 149
specifier_qualifier_list (124)
    on left: 115 116 117 118, on right: 116 118 158
enumerator (125)
    on left: 119 120, on right: 121 122
enumerator_list (126)
    on left: 121 122, on right: 122 123 124 125 126
enum_specifier (127)
    on left: 123 124 125 126 127, on right: 96
pointer (128)
    on left: 128 129 130 131, on right: 130 131 147
direct_declarator (129)
    on left: 132 133 134 135 136 137 138 139 140 141 142 143 144 145,
    on right: 134 135 136 137 138 139 140 141 142 143 144 145 146 147
declarator (130)
    on left: 146 147, on right: 100 101 133 153 215 216
type_qualifier_list (131)
    on left: 148 149, on right: 129 130 134 136 138 140 141 149
parameter_type_list (132)
    on left: 150 151, on right: 143
parameter_declaration (133)
    on left: 152 153, on right: 154 155
parameter_list (134)
    on left: 154 155, on right: 150 151 155
identifier_list (135)
    on left: 156 157, on right: 144 157
type_name (136)
    on left: 158, on right: 16 17 25 33
initializer (137)
    on left: 159 160 161, on right: 101 162 163 164 165
initializer_list (138)
    on left: 162 163 164 165, on right: 16 17 160 161 164 165
designation (139)
    on left: 166, on right: 162 164
designator_list (140)
    on left: 167 168, on right: 166 168
designator (141)
    on left: 169 170, on right: 167 168
labeled_statement (142)
    on left: 171 172 173, on right: 203
compound_statement (143)
    on left: 174 175, on right: 204 215 216
block_item_list (144)
    on left: 176 177, on right: 174 177
block_item (145)
    on left: 178 179, on right: 176 177
expression_statement (146)
    on left: 180 181, on right: 205
M (147)
    on left: 182, on right: 59 61 63 177 178 188 189 191 192 193
N (148)
    on left: 183, on right: 63 188 193
expression_opt1 (149)
    on left: 184 185, on right: 193
expression_opt2 (150)
    on left: 186 187, on right: 188 189 191 192 193
selection_statement (151)
    on left: 188 189 190, on right: 206
iteration_statement (152)
    on left: 191 192 193 194 195 196 197, on right: 207
jump_statement (153)
    on left: 198 199 200 201 202, on right: 208
statement (154)
    on left: 203 204 205 206 207 208, on right: 171 172 173 179 188
    189 190 191 192 193 194 195 196 197
external_declaration (155)
    on left: 209 210, on right: 211 212
translation_unit (156)
    on left: 211 212, on right: 0 212
declaration_list (157)
    on left: 213 214, on right: 214 215
function_definition (158)
    on left: 215 216, on right: 209
X (159)
    on left: 217, on right: 143 144 145
Y (160)
    on left: 218, on right: 210 215 216


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    function_specifier       go to state 24
    declaration_specifiers   go to state 25
    declaration              go to state 26
    type_qualifier           go to state 27
    enum_specifier           go to state 28
    external_declaration     go to state 29
    translation_unit         go to state 30
    function_definition      go to state 31


State 1

   82 storage_class_specifier: AUTO .

    $default  reduce using rule 82 (storage_class_specifier)


State 2

   85 type_specifier: CHAR .

    $default  reduce using rule 85 (type_specifier)


State 3

  112 type_qualifier: CONST .

    $default  reduce using rule 112 (type_qualifier)


State 4

   90 type_specifier: DOUBLE .

    $default  reduce using rule 90 (type_specifier)


State 5

  123 enum_specifier: ENUM . IDENTIFIER L_BRACES enumerator_list R_BRACES
  124               | ENUM . L_BRACES enumerator_list R_BRACES
  125               | ENUM . IDENTIFIER L_BRACES enumerator_list COMMA R_BRACES
  126               | ENUM . L_BRACES enumerator_list COMMA R_BRACES
  127               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32
    L_BRACES    shift, and go to state 33


State 6

   80 storage_class_specifier: EXTERN .

    $default  reduce using rule 80 (storage_class_specifier)


State 7

   89 type_specifier: FLOAT .

    $default  reduce using rule 89 (type_specifier)


State 8

   97 function_specifier: INLINE .

    $default  reduce using rule 97 (function_specifier)


State 9

   87 type_specifier: INT .

    $default  reduce using rule 87 (type_specifier)


State 10

   88 type_specifier: LONG .

    $default  reduce using rule 88 (type_specifier)


State 11

   83 storage_class_specifier: REGISTER .

    $default  reduce using rule 83 (storage_class_specifier)


State 12

  113 type_qualifier: RESTRICT .

    $default  reduce using rule 113 (type_qualifier)


State 13

   86 type_specifier: SHORT .

    $default  reduce using rule 86 (type_specifier)


State 14

   91 type_specifier: SIGNED .

    $default  reduce using rule 91 (type_specifier)


State 15

   81 storage_class_specifier: STATIC .

    $default  reduce using rule 81 (storage_class_specifier)


State 16

   92 type_specifier: UNSIGNED .

    $default  reduce using rule 92 (type_specifier)


State 17

   84 type_specifier: VOID .

    $default  reduce using rule 84 (type_specifier)


State 18

  114 type_qualifier: VOLATILE .

    $default  reduce using rule 114 (type_qualifier)


State 19

   93 type_specifier: _BOOL .

    $default  reduce using rule 93 (type_specifier)


State 20

   94 type_specifier: _COMPLEX .

    $default  reduce using rule 94 (type_specifier)


State 21

   95 type_specifier: _IMAGINARY .

    $default  reduce using rule 95 (type_specifier)


State 22

  102 declaration_specifiers: storage_class_specifier .
  103                       | storage_class_specifier . declaration_specifiers

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    AUTO        [reduce using rule 102 (declaration_specifiers)]
    CHAR        [reduce using rule 102 (declaration_specifiers)]
    CONST       [reduce using rule 102 (declaration_specifiers)]
    DOUBLE      [reduce using rule 102 (declaration_specifiers)]
    ENUM        [reduce using rule 102 (declaration_specifiers)]
    EXTERN      [reduce using rule 102 (declaration_specifiers)]
    FLOAT       [reduce using rule 102 (declaration_specifiers)]
    INLINE      [reduce using rule 102 (declaration_specifiers)]
    INT         [reduce using rule 102 (declaration_specifiers)]
    LONG        [reduce using rule 102 (declaration_specifiers)]
    REGISTER    [reduce using rule 102 (declaration_specifiers)]
    RESTRICT    [reduce using rule 102 (declaration_specifiers)]
    SHORT       [reduce using rule 102 (declaration_specifiers)]
    SIGNED      [reduce using rule 102 (declaration_specifiers)]
    STATIC      [reduce using rule 102 (declaration_specifiers)]
    UNSIGNED    [reduce using rule 102 (declaration_specifiers)]
    VOID        [reduce using rule 102 (declaration_specifiers)]
    VOLATILE    [reduce using rule 102 (declaration_specifiers)]
    _BOOL       [reduce using rule 102 (declaration_specifiers)]
    _COMPLEX    [reduce using rule 102 (declaration_specifiers)]
    _IMAGINARY  [reduce using rule 102 (declaration_specifiers)]
    $default    reduce using rule 102 (declaration_specifiers)

    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    function_specifier       go to state 24
    declaration_specifiers   go to state 34
    type_qualifier           go to state 27
    enum_specifier           go to state 28


State 23

  104 declaration_specifiers: type_specifier .
  105                       | type_specifier . declaration_specifiers

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    AUTO        [reduce using rule 104 (declaration_specifiers)]
    CHAR        [reduce using rule 104 (declaration_specifiers)]
    CONST       [reduce using rule 104 (declaration_specifiers)]
    DOUBLE      [reduce using rule 104 (declaration_specifiers)]
    ENUM        [reduce using rule 104 (declaration_specifiers)]
    EXTERN      [reduce using rule 104 (declaration_specifiers)]
    FLOAT       [reduce using rule 104 (declaration_specifiers)]
    INLINE      [reduce using rule 104 (declaration_specifiers)]
    INT         [reduce using rule 104 (declaration_specifiers)]
    LONG        [reduce using rule 104 (declaration_specifiers)]
    REGISTER    [reduce using rule 104 (declaration_specifiers)]
    RESTRICT    [reduce using rule 104 (declaration_specifiers)]
    SHORT       [reduce using rule 104 (declaration_specifiers)]
    SIGNED      [reduce using rule 104 (declaration_specifiers)]
    STATIC      [reduce using rule 104 (declaration_specifiers)]
    UNSIGNED    [reduce using rule 104 (declaration_specifiers)]
    VOID        [reduce using rule 104 (declaration_specifiers)]
    VOLATILE    [reduce using rule 104 (declaration_specifiers)]
    _BOOL       [reduce using rule 104 (declaration_specifiers)]
    _COMPLEX    [reduce using rule 104 (declaration_specifiers)]
    _IMAGINARY  [reduce using rule 104 (declaration_specifiers)]
    $default    reduce using rule 104 (declaration_specifiers)

    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    function_specifier       go to state 24
    declaration_specifiers   go to state 35
    type_qualifier           go to state 27
    enum_specifier           go to state 28


State 24

  108 declaration_specifiers: function_specifier .
  109                       | function_specifier . declaration_specifiers

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    AUTO        [reduce using rule 108 (declaration_specifiers)]
    CHAR        [reduce using rule 108 (declaration_specifiers)]
    CONST       [reduce using rule 108 (declaration_specifiers)]
    DOUBLE      [reduce using rule 108 (declaration_specifiers)]
    ENUM        [reduce using rule 108 (declaration_specifiers)]
    EXTERN      [reduce using rule 108 (declaration_specifiers)]
    FLOAT       [reduce using rule 108 (declaration_specifiers)]
    INLINE      [reduce using rule 108 (declaration_specifiers)]
    INT         [reduce using rule 108 (declaration_specifiers)]
    LONG        [reduce using rule 108 (declaration_specifiers)]
    REGISTER    [reduce using rule 108 (declaration_specifiers)]
    RESTRICT    [reduce using rule 108 (declaration_specifiers)]
    SHORT       [reduce using rule 108 (declaration_specifiers)]
    SIGNED      [reduce using rule 108 (declaration_specifiers)]
    STATIC      [reduce using rule 108 (declaration_specifiers)]
    UNSIGNED    [reduce using rule 108 (declaration_specifiers)]
    VOID        [reduce using rule 108 (declaration_specifiers)]
    VOLATILE    [reduce using rule 108 (declaration_specifiers)]
    _BOOL       [reduce using rule 108 (declaration_specifiers)]
    _COMPLEX    [reduce using rule 108 (declaration_specifiers)]
    _IMAGINARY  [reduce using rule 108 (declaration_specifiers)]
    $default    reduce using rule 108 (declaration_specifiers)

    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    function_specifier       go to state 24
    declaration_specifiers   go to state 36
    type_qualifier           go to state 27
    enum_specifier           go to state 28


State 25

  110 declaration: declaration_specifiers .
  111            | declaration_specifiers . init_declarator_list
  215 function_definition: declaration_specifiers . declarator declaration_list compound_statement Y
  216                    | declaration_specifiers . declarator compound_statement Y

    IDENTIFIER  shift, and go to state 37
    L_PARAN     shift, and go to state 38
    MUL         shift, and go to state 39

    $default  reduce using rule 110 (declaration)

    init_declarator_list  go to state 40
    init_declarator       go to state 41
    pointer               go to state 42
    direct_declarator     go to state 43
    declarator            go to state 44


State 26

  210 external_declaration: declaration . SEMICOLON Y

    SEMICOLON  shift, and go to state 45


State 27

  106 declaration_specifiers: type_qualifier .
  107                       | type_qualifier . declaration_specifiers

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    AUTO        [reduce using rule 106 (declaration_specifiers)]
    CHAR        [reduce using rule 106 (declaration_specifiers)]
    CONST       [reduce using rule 106 (declaration_specifiers)]
    DOUBLE      [reduce using rule 106 (declaration_specifiers)]
    ENUM        [reduce using rule 106 (declaration_specifiers)]
    EXTERN      [reduce using rule 106 (declaration_specifiers)]
    FLOAT       [reduce using rule 106 (declaration_specifiers)]
    INLINE      [reduce using rule 106 (declaration_specifiers)]
    INT         [reduce using rule 106 (declaration_specifiers)]
    LONG        [reduce using rule 106 (declaration_specifiers)]
    REGISTER    [reduce using rule 106 (declaration_specifiers)]
    RESTRICT    [reduce using rule 106 (declaration_specifiers)]
    SHORT       [reduce using rule 106 (declaration_specifiers)]
    SIGNED      [reduce using rule 106 (declaration_specifiers)]
    STATIC      [reduce using rule 106 (declaration_specifiers)]
    UNSIGNED    [reduce using rule 106 (declaration_specifiers)]
    VOID        [reduce using rule 106 (declaration_specifiers)]
    VOLATILE    [reduce using rule 106 (declaration_specifiers)]
    _BOOL       [reduce using rule 106 (declaration_specifiers)]
    _COMPLEX    [reduce using rule 106 (declaration_specifiers)]
    _IMAGINARY  [reduce using rule 106 (declaration_specifiers)]
    $default    reduce using rule 106 (declaration_specifiers)

    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    function_specifier       go to state 24
    declaration_specifiers   go to state 46
    type_qualifier           go to state 27
    enum_specifier           go to state 28


State 28

   96 type_specifier: enum_specifier .

    $default  reduce using rule 96 (type_specifier)


State 29

  211 translation_unit: external_declaration .

    $default  reduce using rule 211 (translation_unit)


State 30

    0 $accept: translation_unit . $end
  212 translation_unit: translation_unit . external_declaration
